--- a/server/.env
+++ b/server/.env
@@ -3,4 +3,4 @@ MONGODB_URI=mongodb+srv://unknownuser0452:Ajitesh9797@cluster0.qptgbur.mongodb.n
 # clerk------
 CLERK_PUBLISHABLE_KEY=pk_test_bWF0dXJlLWJhcm5hY2xlLTg2LmNsZXJrLmFjY291bnRzLmRldiQ
 CLERK_SECRET_KEY=sk_test_FN1NSHjz69yfinxKOW8Tn8qza1DJetRASEKUGtmdMq
-CLERK_WEBHOOK_SECRET = whsec_t9JPRMyYBcgHx6JeEgbOs8hYz9qEmZFo
+CLERK_WEBHOOK_SECRET=whsec_t9JPRMyYBcgHx6JeEgbOs8hYz9qEmZFo
